# news-boards

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: clean-architecture-python.mdc  git-branch-per-change.mdc  github-actions-ci.mdc  project-autonomy.mdc  python-313.mdc  python-match-multibranch.mdc  security-credentials-and-leaks.mdc  solid-python.mdc  vercel-deployment.mdc
.cursor/skills/containerize-news-boards/: SKILL.md  reference.md
.cursor/skills/context7-latest-docs/: SKILL.md  reference.md
.cursor/skills/python-isort-black-format/: SKILL.md  reference.md
.cursor/skills/python-testing-after-implementation/: SKILL.md  reference.md
api/: index.py
src/news_boards/: __init__.py  app_factory.py  config.py  extensions.py  feeds.py  routes.py  url_safety.py  wsgi.py
src/news_boards/templates/: base.html  error.html  index.html
tests/: conftest.py  test_config.py  test_feeds.py  test_routes.py  test_url_safety.py
