[project]
name = "news-boards"
version = "0.1.0"
description = "Flask blog aggregator for Vercel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0",
    "flask-caching>=2.3",
    "httpx>=0.28",
    "feedparser>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_boards"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
